@@ -6,6 +6,7 @@ with respect to new features and compatibility changes.
 
 2018-11-26
  * Fix trends delta roll up calculation.
+ * Add --target option to wing trends command line.
 
 2018-11-25
  * Added Wing::Instrument to make it easier to profile Wing.
